<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:id="@+id/ll_adaptermain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_5dp"
        android:paddingLeft="@dimen/pad_10dp"
        android:paddingRight="@dimen/pad_10dp"
        android:paddingTop="@dimen/pad_5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:text="@string/id"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:text="@string/payloadtype"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_payloadtype"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:text="@string/nationality"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_nationality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="left"
                android:text="@string/orbit"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_orbit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider" />

    </LinearLayout>
</layout>