<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:padding="@dimen/pad_10dp">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_editprofile"
                android:layout_width="@dimen/pad_25dp"
                android:layout_height="@dimen/pad_25dp"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="@dimen/pad_10dp"
                app:srcCompat="@drawable/ic_editpic" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_branchname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:text="@string/txt_profile"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/txt_18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_closeprofile"
                android:layout_width="@dimen/pad_25dp"
                android:layout_height="@dimen/pad_25dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/pad_10dp"
                app:srcCompat="@drawable/ic_close" />

        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/pad_10dp"
            android:paddingBottom="@dimen/pad_10dp"
            android:paddingLeft="@dimen/pad_25dp"
            android:paddingRight="@dimen/pad_25dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText">

            <EditText
                android:id="@+id/et_mobilenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_employee_id"
                android:inputType="number"
                android:maxLength="@integer/mobilenummaxlength"
                android:maxLines="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/txt_14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/pad_25dp"
            android:paddingRight="@dimen/pad_25dp"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/ErrorTextAppearance"
            app:hintAnimationEnabled="true"
            app:hintEnabled="true"
            app:hintTextAppearance="@style/HintText"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_password"
                android:inputType="textPassword"
                android:maxLength="@integer/passwordmaxlength"
                android:maxLines="1"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/txt_14sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/ftv_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/pad_25dp"
            android:background="@drawable/shape_rectangle_border_greydark"
            android:gravity="center"
            android:paddingBottom="@dimen/pad_10dp"
            android:paddingLeft="@dimen/pad_26dp"
            android:paddingRight="@dimen/pad_26dp"
            android:paddingTop="@dimen/pad_10dp"
            android:text="@string/txt_update"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/txt_14sp" />

    </LinearLayout>
</layout>