<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="developer.futureinskies.Login.LoginViewModel" />
    </data>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/pad_15dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/pad_30dp"
            tools:ignore="UselessParent">

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="@dimen/pad_40dp"
                android:layout_height="@dimen/pad_40dp"
                app:srcCompat="@drawable/ic_f"
                tools:ignore="VectorDrawableCompat" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/pad_25dp"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/et_mobilenumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_employee_id"
                    android:inputType="number"
                    android:maxLength="@integer/mobilenummaxlength"
                    android:maxLines="1"
                    android:text="@={viewmodel.mobilenum}"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/txt_14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/ErrorTextAppearance"
                app:hintAnimationEnabled="true"
                app:hintEnabled="true"
                app:hintTextAppearance="@style/HintText">

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txt_password"
                    android:inputType="textPassword"
                    android:maxLength="@integer/passwordmaxlength"
                    android:maxLines="1"
                    android:text="@={viewmodel.password}"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/txt_14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/ftv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|right"
                android:background="@drawable/shape_rectangle_border_greydark"
                android:gravity="center"
                android:paddingBottom="@dimen/pad_10dp"
                android:paddingLeft="@dimen/pad_26dp"
                android:paddingRight="@dimen/pad_26dp"
                android:paddingTop="@dimen/pad_10dp"
                android:text="@string/txt_signin"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/txt_14sp" />

        </LinearLayout>
    </LinearLayout>
</layout>