<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:id="@+id/ll_adaptermain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/pad_5dp"
        android:paddingLeft="@dimen/pad_10dp"
        android:paddingRight="@dimen/pad_10dp"
        android:paddingTop="@dimen/pad_5dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_branchname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginRight="@dimen/pad_10dp"
                android:layout_toLeftOf="@+id/iv_viewdetails"
                android:text="dgss"
                android:textColor="@color/colorBlue"
                android:textSize="@dimen/txt_18sp"
                android:textStyle="bold" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/iv_viewdetails"
                android:layout_width="@dimen/pad_25dp"
                android:layout_height="@dimen/pad_25dp"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_gravity="right"
                android:src="@drawable/ic_nextpage" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/year"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_year"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/status"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/pad_5dp"
            android:paddingTop="@dimen/pad_5dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/location"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left"
                android:textColor="@color/colorTextThird"
                android:textSize="@dimen/txt_13sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/colorDivider" />

    </LinearLayout>
</layout>